	or debug sessions.

	
OTHERS

    o	file.access() has been rewritten using Win32 functions and
	should be more reliable, particularly on NT-based versions of
	Windows.  (PR#7234)

    o	The version number of the installer now includes the SVN
	revision number (which is handy for R-patched and R-devel
	daily builds).


BUG FIXES

    o	unlink() was not accepting wildcards.



		CHANGES IN R VERSION 2.5.0

GUI CHANGES

    o	In MDI mode there is a new View menu when the console is in
	focus which allows the toolbar and statusbar to be
	(de)selected, with the initial settings taken from the
	Rconsole file as before.  The default setting for the
	statusbar has been changed to 'no', as it is barely used by
	default.

    o	There is a new menu item in Rgui to 'Stop all computations'
	which kills all R computations immediately, skips any on.exit
	conditions and returns to the command prompt.

    o	The 'Install packages ...' menu item now only installs essential
	dependencies ('Depends' and 'Imports' but not 'Suggests'),
	using install.packages(dependencies = NA).

    o	The 'save as' file dialogs from the 'File' menu in a graphics
	window now add an appropriate extension to the file name.  To
	specify a file name without an extension, put the name in
	quotes, e.g.  "foo".  (As requested in PR#9336.)

    o	There is support in both Rgui and Rterm for object/file name
	completion via the TAB key using package rcompgen.  This can
	be disabled by setting the environment variable
	R_COMPLETION=FALSE when starting R (e.g. in ~/.Renviron).
	(Words within quotes are interpreted as file names, others as
	R object names.  Use library(rcompgen); ?rc.options for more
	details, including tuning the behaviour.)


FUNCTION CHANGES

    o	Sys.getenv() has been changed to use the C-level environment and
	not the Windows environment block for the process, for
	consistency with Sys.getenv("FOO"), Sys.setenv() and
	Sys.unsetenv().  A few Windows-specific environment variables